<resources>
    <string name="app_name" translatable="false">jWeather</string>
    <string name="app_header">jWeather</string>
    <string name="app_info_header" translatable="false">Weather Application</string>
    <string name="app_copyright" translatable="false">2019 GeekBrains</string>
    <string name="getForecast">Request</string>

    <string name="infoWind">m/s</string>
    <string name="infoPressure">mb</string>
    <string name="infoHumidity" translatable="false">%</string>

    <string name="yourCity">Your city</string>
    <string name="headerWind">Wind:</string>
    <string name="headerTemperature">Temperature:</string>
    <string name="headerHumidity">Humidity:</string>
    <string name="headerPressure">Pressure:</string>

    <string name="noData">add to request</string>
    <string name="incorrectRequest" translatable="false">Empty or incorrect request</string>

    <string name="toolCity">Moscow</string>
    <string name="toolTemperature" translatable="false">12</string>

    <string name="empty">Cities list is empty</string>

    <string name="about">About</string>
    <string name="version">Version</string>

    <string name="weekForecast">\u25C0 Yesterday</string>
    <string name="today">Today</string>
    <string name="last_week">Past days</string>
    <string name="addHistory">Add</string>
    <string name="share">Share</string>

    <!-- Feedback Form -->
    <string name="feedBackInvitation">Type your feedback here</string>
    <string name="feedBackMessageHint">Your message*</string>
    <string name="feedBackNameHint">Your name*</string>
    <string name="feedBackEmailHint">Your email*</string>
    <string name="feedBackSend">POST</string>

    <!-- Developer Info -->
    <string name="student">GeekBrains Student</string>

    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>

    <!-- Drawer menu-->
    <string name="feedBackMenu">Feedback</string>
    <string name="devMenu">About developer</string>
    <string name="sensorMenu">Embedded sensors</string>
    <string name="temperatureMenu">Temperature and Humidity</string>

    <!-- Sensors -->
    <string name="sensorNotSupported">No sensor</string>
    <string name="sensorInfo">Sensor information</string>

    <!-- Dialog buttons-->
    <string name="buttonClose">Close</string>

    <!-- Custom View -->
    <string name="text_avatar">Student</string>

    <!-- ProgressBar header-->
    <string name="loading">Loading&#8230;</string>

    <!-- Internet connection -->
    <string name="connectivity_alert">No response</string>
    <string name="check_connection">Place not found or server unavailable</string>

    <!-- Firebase -->
    <string name="topic" translatable="false">weather</string>

    <!-- GPS -->
    <string name="gpsAcquiring">Acquiring Satellite&#8230;</string>
    <string name="gpsAcquired">Current location</string>

    <string-array name="cities">
        <item>Current place</item>
        <item>Moscow</item>
        <item>Saint Petersburg</item>
        <item>Novosibirsk</item>
        <item>Samara</item>
        <item>Penza</item>
        <item>Tbilisi</item>
    </string-array>

    <string-array name="cities_openweather" translatable="false">
        <item>Current place,ru</item>
        <item>Moscow,ru</item>
        <item>Saint Petersburg,ru</item>
        <item>Novosibirsk,ru</item>
        <item>Samara,ru</item>
        <item>Penza,ru</item>
        <item>Tbilisi,ge</item>
    </string-array>

</resources>
