<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_temperature"
            android:icon="@drawable/wall_thermometer"
            android:title="@string/temperatureMenu"/>
        <item
            android:id="@+id/nav_sensor"
            android:icon="@drawable/ic_sensor_black_24dp"
            android:title="@string/sensorMenu"/>
        <item
            android:id="@+id/nav_feedback"
            android:icon="@drawable/ic_comment_black_24dp"
            android:title="@string/feedBackMenu"/>
        <item
            android:id="@+id/nav_developer"
            android:icon="@drawable/ic_person_outline_black_24dp"
            android:title="@string/devMenu"/>
    </group>
</menu>
