<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:paddingStart="12dp"
        android:orientation="vertical"
        android:layout_gravity="left">

        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_width="96dp"
                    android:layout_height="96dp"
                    android:src="@drawable/temperature" />
                <TableLayout
                    android:layout_gravity="center_vertical">
                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="right"
                            android:textSize="16sp"
                            android:textStyle="bold|italic"
                            android:textAlignment="gravity"
                            android:textColor="@color/colorPrimary"
                            android:text="@string/headerTemperature" />
                        <TextView
                            android:id="@+id/tvT"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="24dp"
                            android:gravity="left"
                            android:textSize="16sp"
                            android:textAlignment="gravity"
                            tools:text="@string/sensorNotSupported"/>

                    </TableRow>
                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="right"
                            android:textSize="16sp"
                            android:textStyle="bold|italic"
                            android:textAlignment="gravity"
                            android:textColor="@color/colorPrimary"
                            android:text="@string/headerHumidity" />
                        <TextView
                            android:id="@+id/tvH"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="24dp"
                            android:gravity="left"
                            android:textSize="16sp"
                            android:textAlignment="gravity"
                            tools:text="@string/sensorNotSupported"/>
                    </TableRow>
                </TableLayout>
            </TableRow>
        </TableLayout>
    </LinearLayout>

</LinearLayout>




