<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="@dimen/topMargin"
    android:orientation="vertical"
    tools:context=".ui.ForecastActivity">

    <TextView
        android:id="@+id/tv_city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="@dimen/leftMargin"
        android:layout_marginTop="12dp"
        android:textSize="24sp"
        android:textStyle="bold"
        tools:text="@string/toolCity" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:text="@string/today"
        android:textSize="16sp"
        tools:text="@string/today" />


    <LinearLayout
        android:id="@+id/pbfContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center|top"
        android:orientation="vertical">
        <ProgressBar
            android:id="@+id/progressBarF"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="fill_parent"
            android:layout_height="6dp"
            android:layout_marginStart="@dimen/leftMargin"
            android:layout_marginTop="@dimen/leftMargin"
            android:layout_marginEnd="@dimen/endMargin"
            android:indeterminate="true"
            android:theme="@style/LinearProgress" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/loading"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llForecast"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:layout_marginStart="@dimen/leftMargin"
            android:layout_marginTop="@dimen/leftMargin"
            android:layout_marginEnd="@dimen/endMargin"
            android:background="#c0c0c0" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/topMargin"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_temperature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginStart="@dimen/leftMargin"
                android:layout_marginEnd="@dimen/endMargin"
                android:textAlignment="gravity"
                android:textSize="@dimen/celsius"
                tools:text="@string/toolTemperature" />

            <ImageView
                android:id="@+id/iv_sky"
                android:layout_width="@dimen/imgWidth"
                android:layout_height="@dimen/imgHeight"
                android:layout_marginStart="@dimen/leftMargin"
                android:layout_marginEnd="@dimen/endMargin"
                tools:src="@drawable/sun" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/topMargin"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/iconSize"
                android:layout_height="@dimen/iconSize"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/iconStartMargin"
                android:layout_marginEnd="@dimen/endMargin"
                android:src="@drawable/icon_wind" />

            <TextView
                android:id="@+id/tv_wind"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/leftMargin"
                android:layout_marginEnd="@dimen/endMargin"
                android:gravity="start"
                android:textSize="20sp"
                tools:text="7 m/s" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/topMargin"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/iconSize"
                android:layout_height="@dimen/iconSize"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/iconStartMargin"
                android:layout_marginEnd="@dimen/endMargin"
                android:src="@drawable/icon_humidity" />

            <TextView
                android:id="@+id/tv_humidity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/leftMargin"
                android:layout_marginEnd="@dimen/endMargin"
                android:gravity="start"
                android:textSize="20sp"
                tools:text="68 %" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/topMargin"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/iconSize"
                android:layout_height="@dimen/iconSize"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/iconStartMargin"
                android:layout_marginEnd="@dimen/endMargin"
                android:src="@drawable/icon_pressure2" />

            <TextView
                android:id="@+id/tv_pressure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/leftMargin"
                android:layout_marginEnd="@dimen/endMargin"
                android:gravity="start"
                android:textSize="20sp"
                tools:text="1003 mb" />
        </LinearLayout>
    </LinearLayout>




</LinearLayout>